Fixed another stringAtPos(-1) call (known & hated signedness issue)

BUG: 131933

svn path=/branches/KDE/3.5/kdelibs/; revision=570246